--- a/html-css/index.html
+++ b/html-css/index.html
@@ -12,25 +12,25 @@
 <body>
   <h1 class="page-headline">Step9課題 w8-output</h1>
   <!-- gridレイアウト -->
-   <section class="section">
+   <section class="section grid-apartment">
     <h1 class="section-headline">グリッドマンション</h1>
     <div class="grid grid4-4">
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
-      <div class="apartment">a</div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
+      <div class="apartment apartment-dark"></div>
+      <div class="apartment apartment-light"></div>
     </div>
   </section>
   <section class="section">
